Small changes to paper

--- a/Fsing/TestIdealsPaper/MainBib.bib
+++ b/Fsing/TestIdealsPaper/MainBib.bib
@@ -698,10 +698,6 @@ MRREVIEWER = {Scott R. Nollet},
   coden = {TAMTAM},
   doi = {10.1090/S0002-9947-09-04719-9},
   fjournal = {Transactions of the American Mathematical Society},
-  issn = {0002-9947},
-  mrclass = {13A35 (14B05 14F18)},
-  mrnumber = {2538604 (2011a:13006)},
-  mrreviewer = {D.-M. Popescu},
   url = {http://dx.doi.org/10.1090/S0002-9947-09-04719-9}
 }
 
@@ -717,17 +713,16 @@ MRREVIEWER = {Scott R. Nollet},
   doi = {10.1307/mmj/1220879396},
   fjournal = {Michigan Mathematical Journal},
   issn = {0026-2285},
-  mrclass = {13A35 (14F18)},
-  mrnumber = {2492440 (2010c:13003)},
-  mrreviewer = {Tomasz Szemberg},
   url = {http://dx.doi.org/10.1307/mmj/1220879396}
 }
 
-@ARTICLE{BlickleSchwedeSurveyPMinusE,
-  author = {Blickle, Manuel AND Schwede, Karl},
-  title = {$p^{-1}$-linear maps in algebra and geometry},
-  year = {2012},
-  note = {arXiv:1205.4577, to appear in a volume published by Springer}
+@InCollection{BlickleSchwedeSurveyPMinusE,
+  Title                    = {$p^{-1}$-linear maps in algebra and geometry},
+  Author                   = {Blickle, Manuel and Schwede, Karl},
+  Booktitle                = {Commutative Algebra},
+  Publisher                = {Springer},
+  Year                     = {2013},
+  Pages                    = {123--205}
 }
 
 @ARTICLE{BlickleSchwedeTakagiZhang,
@@ -743,9 +738,6 @@ MRREVIEWER = {Scott R. Nollet},
   coden = {MAANA},
   doi = {10.1007/s00208-009-0461-2},
   fjournal = {Mathematische Annalen},
-  issn = {0025-5831},
-  mrclass = {13A35 (14B05)},
-  mrnumber = {2658149},
   url = {http://dx.doi.org/10.1007/s00208-009-0461-2}
 }
 
@@ -758,10 +750,14 @@ MRREVIEWER = {Scott R. Nollet},
 }
 
 @ARTICLE{BlickleSchwedeTuckerTestAlterations,
-  author = {Blickle, Manuel and Schwede, Karl and Tucker, Kevin},
-  title = {{$F$}-singularities via alterations},
-  year = {2011},
-  note = {arXiv:1107.3807}
+  title={{$F$}-singularities via alterations},
+  author={Blickle, Manuel and Schwede, Karl and Tucker, Kevin},
+  Fjournal={American Journal of Mathematics},
+  journal={Amer.\ J.\ Math.},
+  volume={137},
+  number={1},
+  pages={61--109},
+  year={2015}
 }
 
 @ARTICLE{BlickleSchwedeTuckerTestIdeals2,
@@ -974,10 +970,7 @@ MRREVIEWER = {Scott R. Nollet},
   pages = {x+250},
   series = {Progress in Mathematics},
   address = {Boston, MA},
-  isbn = {0-8176-4191-2},
-  mrclass = {14M15 (13A35 14C05 17B10 20G05)},
-  mrnumber = {MR2107324 (2005k:14104)},
-  mrreviewer = {Vikram B. Mehta}
+  isbn = {0-8176-4191-2}
 }
 
 @ARTICLE{BrionThomsenFRegularityOfLarge,
@@ -1758,10 +1751,7 @@ MRREVIEWER = {Scott R. Nollet},
   pages = {721--754},
   number = {7},
   fjournal = {Algebra \& Number Theory},
-  issn = {1937-0652},
-  mrclass = {13A35 (13D45 13F55)},
-  mrnumber = {MR2460693 (2009i:13009)},
-  mrreviewer = {Irena Swanson}
+  issn = {1937-0652}
 }
 
 @ARTICLE{EnescuShimomotoOnTheUpperSemicontiuityOfTheHKMult,
@@ -1872,10 +1862,7 @@ MRREVIEWER = {Scott R. Nollet},
   number = {2},
   coden = {TAMTAM},
   fjournal = {Transactions of the American Mathematical Society},
-  issn = {0002-9947},
-  mrclass = {13H10 (13D03 14B05)},
-  mrnumber = {MR701505 (84h:13031)},
-  mrreviewer = {D. Kirby}
+  issn = {0002-9947}
 }
 
 @INCOLLECTION{FedderWatanabe,
@@ -2118,7 +2105,7 @@ MRREVIEWER = {Scott R. Nollet},
 
 @MISC{PushForward,
   author = {Raicu, Claudiu},
-  title = {PushForward.m2},
+  title = {{P}ush{F}orward.m2},
   howpublished = {Available at \href{https://github.com/Macaulay2/M2/blob/master/M2/Macaulay2/packages/PushForward.m2}% {http://www.math.uiuc.edu/Macaulay2/}}
 }
 
@@ -2512,17 +2499,14 @@ MRREVIEWER = {Scott R. Nollet},
 
 @ARTICLE{HaraWatanabeFRegFPure,
   author = {Hara, Nobuo and Watanabe, Kei-Ichi},
-  title = {F-regular and {F}-pure rings vs. log terminal and log canonical singularities},
+  title = {{$F$}-regular and {$F$}-pure rings vs.\ log terminal and log canonical singularities},
   journal = {J. Algebraic Geom.},
   year = {2002},
   volume = {11},
   pages = {363--392},
   number = {2},
   fjournal = {Journal of Algebraic Geometry},
-  issn = {1056-3911},
-  mrclass = {13A35 (14B05 14J17)},
-  mrnumber = {MR1874118 (2002k:13009)},
-  mrreviewer = {Karen E. Smith}
+  issn = {1056-3911}
 }
 
 @ARTICLE{HaraWatanabeYoshidaFRationalityOfRees,
@@ -2707,10 +2691,7 @@ MRREVIEWER = {Scott R. Nollet},
   pages = {45--79},
   number = {1},
   fjournal = {Annals of Mathematics. Second Series},
-  issn = {0003-486X},
-  mrclass = {14B15 (14M10)},
-  mrnumber = {MR0441962 (56 \#353)},
-  mrreviewer = {G. Horrocks}
+  issn = {0003-486X}
 }
 
 @INCOLLECTION{HashimotoCMFinjectiveHoms,
@@ -2894,7 +2875,7 @@ MRREVIEWER = {Scott R. Nollet},
 @ARTICLE{HochsterFoundations,
   author = {Hochster, Melvin},
   title = {Foundations of tight closure theory},
-  journal = {lecture notes from a course taught on the University of Michigan
+  journal = {lecture notes from a course taught at the University of Michigan
 	Fall 2007},
   year = {2007},
   eprint = {http://www.math.lsa.umich.edu/~hochster/711F07/fndtc.pdf}
@@ -3114,10 +3095,7 @@ MRREVIEWER = {Scott R. Nollet},
   pages = {31--116},
   number = {1},
   fjournal = {Journal of the American Mathematical Society},
-  issn = {0894-0347},
-  mrclass = {13C05 (13A15 13A50 13B99 13D02)},
-  mrnumber = {MR1017784 (91g:13010)},
-  mrreviewer = {Luchezar L. Avramov}
+  issn = {0894-0347}
 }
 
 @ARTICLE{HochsterHunekeTightClosureAndStrongFRegularity,
@@ -3572,10 +3550,7 @@ Journal of the London Mathematical Society 81 (3), 589-607
   pages = {933--948},
   number = {4},
   fjournal = {Compositio Mathematica},
-  issn = {0010-437X},
-  mrclass = {13H10 (13A35 13D45)},
-  mrnumber = {MR2441251 (2009d:13030)},
-  mrreviewer = {Irena Swanson}
+  issn = {0010-437X}
 }
 
 @ARTICLE{KatzmanTheComplexityOfFrobeniusPowers,
@@ -3610,9 +3585,6 @@ Journal of the London Mathematical Society 81 (3), 589-607
   doi = {10.1016/j.jalgebra.2008.11.032},
   fjournal = {Journal of Algebra},
   issn = {0021-8693},
-  mrclass = {13A35 (13F40)},
-  mrnumber = {2567418 (2011c:13005)},
-  mrreviewer = {Yongwei Yao},
   url = {http://dx.doi.org/10.1016/j.jalgebra.2008.11.032}
 }
 
@@ -4253,10 +4225,7 @@ Journal of Symbolic Computation 60, 29-46
   pages = {3595--3597},
   number = {19},
   fjournal = {International Mathematics Research Notices. IMRN},
-  issn = {1073-7928},
-  mrclass = {13A35 (14B05 14G17 14M15)},
-  mrnumber = {2539185 (2010j:13012)},
-  mrreviewer = {Karl Schwede}
+  issn = {1073-7928}
 }
 
 @ARTICLE{KumarSchwedeRichardsonVarsAreKLT,
@@ -4323,10 +4292,7 @@ Journal of Symbolic Computation 60, 29-46
   volume = {91},
   pages = {772--784},
   fjournal = {American Journal of Mathematics},
-  issn = {0002-9327},
-  mrclass = {13.95},
-  mrnumber = {MR0252389 (40 \#5609)},
-  mrreviewer = {M. Nagata}
+  issn = {0002-9327}
 }
 
 @ARTICLE{Lakshmibai2008,
@@ -4632,10 +4598,7 @@ Journal of Symbolic Computation 60, 29-46
   pages = {65--130},
   coden = {JRMAA8},
   fjournal = {Journal f\"ur die Reine und Angewandte Mathematik},
-  issn = {0075-4102},
-  mrclass = {13A35 (13D45)},
-  mrnumber = {MR1476089 (99c:13005)},
-  mrreviewer = {Rodney Y. Sharp}
+  issn = {0075-4102}
 }
 
 @ARTICLE{LyubeznikSmithCommutationOfTestIdealWithLocalization,
@@ -5566,9 +5529,6 @@ MRREVIEWER = {R. C. Hartshorne},
   doi = {10.2140/ant.2009.3.907},
   fjournal = {Algebra \& Number Theory},
   issn = {1937-0652},
-  mrclass = {14B05 (13A35)},
-  mrnumber = {2587408 (2011b:14006)},
-  mrreviewer = {D.-M. Popescu},
   url = {http://dx.doi.org/10.2140/ant.2009.3.907}
 }
 
@@ -5691,11 +5651,13 @@ MRREVIEWER = {R. C. Hartshorne},
 }
 
 @ARTICLE{SchwedeTuckerTestIdealFiniteMaps,
-  author = {Schwede, Karl and Tucker, Kevin},
-  title = {On the behavior of test ideals under finite morphisms},
-  year = {2010},
-  note = {arXiv:1003.4333, to appear in J. Algebraic Geom.},
-  eprint = {arXiv:1003.4333}
+  Title                    = {On the behavior of test ideals under finite morphisms},
+  Author                   = {Schwede, Karl and Tucker, Kevin},
+  Journal                  = {J.\ Algebraic Geom.},
+  Year                     = {2014},
+  Number                   = {3},
+  Pages                    = {399--443},
+  Volume                   = {23}
 }
 
 @ARTICLE{Schwede2009a,
@@ -5815,10 +5777,7 @@ MRREVIEWER = {R. C. Hartshorne},
   number = {9},
   coden = {TAMTAM},
   fjournal = {Transactions of the American Mathematical Society},
-  issn = {0002-9947},
-  mrclass = {13A35 (13D45 13H10 16S36)},
-  mrnumber = {MR2309183 (2008b:13006)},
-  mrreviewer = {Geoffrey D. Dietz}
+  issn = {0002-9947}
 }
 
 @ARTICLE{SharpTightClosureTestExps,
@@ -7549,7 +7508,7 @@ MRREVIEWER = {A. Verschoren},
 
 @article{SchwedeTuckerTestIdealsOfNonPrincipal,
 title = "Test ideals of non-principal ideals: Computations, jumping numbers, alterations and division theorems",
-journal = "Journal de Mathématiques Pures et Appliquées",
+journal = "J. Math. Pures Appl.",
 volume = "102",
 number = "5",
 pages = "891 - 929",
