Tiny change to paper.

--- a/Fsing/TestIdealsPaper/TestIdeals.tex
+++ b/Fsing/TestIdealsPaper/TestIdeals.tex
@@ -781,7 +781,7 @@ In this section, we explain how to compute parameter test modules, parameter tes
 %
 %\pedro{Are we assuming here that $R$ is a quotient of a polynomial ring?}
 %
-Given an reduced ring $R$ of finite type over a perfect field $k$, the Frobenius map $R \hookrightarrow R^{1/p^e}$ is dual to $T : \omega_{R^{1/p^e}} \to \omega_R$.  As in \autoref{subsec.DualToFrobeniusOnQuotientRings}, we can represent the canonical module $\omega_R \subseteq R$ as an ideal, we can write $R = S/I$, and so we can find an element $u \in S^{1/p^e}$ representing the map $T:\omega_{R^{1/p^e}} \to \omega_R$; see \autoref{subsec.DualToFrobeniusOnQuotientRings} or \cite{KatzmanParameterTestIdealOfCMRings}.
+Given a reduced ring $R$ of finite type over a perfect field $k$, the Frobenius map $R \hookrightarrow R^{1/p^e}$ is dual to $T : \omega_{R^{1/p^e}} \to \omega_R$.  As in \autoref{subsec.DualToFrobeniusOnQuotientRings}, we can represent the canonical module $\omega_R \subseteq R$ as an ideal, we can write $R = S/I$, and so we can find an element $u \in S^{1/p^e}$ representing the map $T:\omega_{R^{1/p^e}} \to \omega_R$; see \autoref{subsec.DualToFrobeniusOnQuotientRings} or \cite{KatzmanParameterTestIdealOfCMRings}.
 
 \begin{definition}
    The \emph{parameter test submodule} is the smallest submodule $M \subseteq \omega_R$ (and hence ideal of $R$, since $M \subseteq \omega_R \subseteq R$) that agrees generically with $\omega_R$ and that satisfies
