Fixed some bad breaks.

--- a/Fsing/TestIdealsPaper/TestIdeals.tex
+++ b/Fsing/TestIdealsPaper/TestIdeals.tex
@@ -174,7 +174,7 @@ Algorithms for computing $F$-pure thresholds from \cite{HernandezFInvariantsOfDi
 \subsection*{Acknowledgements}
 The authors thank other contributors of the \texttt{TestIdeals.m2} package, namely
 Erin Bela, Juliette Bruce, Drew Ellingson, Matthew Mastroeni, and Maral Mostafazadehfard.
-This paper, and the finishing touches to the \texttt{TestIdeals.m2} package, were made at the University of Utah in 2018, and the visiting authors thank the Department of Mathematics for its hospitality.
+This paper, and the finishing touches to the package \texttt{TestIdeals.m2}, were made at the University of Utah in 2018, and the visiting authors thank the Department of Mathematics for its hospitality.
 
 \section{Frobenius powers and Frobenius roots}\label{Section: Frobenius powers and Frobenius roots}
 
@@ -931,7 +931,7 @@ If such a $\Phi_e$ exists, it can be identified to a generator of the module $(I
 \tau(R) = {\tt ascendIdeal(e, u, I_0)},
 \]
 where \texttt{ascendIdeal} is the method explained above, in \autoref{eq.AscendIdealExplanation}.
-The $e$ here means all Frobenius roots are taken as multiples of $e$.  In other words, we first compute ${\tt I_0 +  (u \cdot I_0)^{1/p^{[e]}}}$.  Then we compute 
+The $e$ here means all Frobenius roots are taken as multiples of $e$.  In other words, we first compute ${\tt I_0 +  (u \cdot I_0)^{1/p^{[e]}}}$.  Then we compute
 \[
 {\tt I_0 +  (u\cdot I_0)^{1/p^{[e]}} + (u^{p^e + 1} \cdot I_0)^{1/p^{[2e]}} }
 \]
