Added three new bibtex entries

--- a/Fsing/TestIdealsPaper/MainBib.bib
+++ b/Fsing/TestIdealsPaper/MainBib.bib
@@ -22,6 +22,23 @@
   url = {http://dx.doi.org/10.1016/j.jalgebra.2012.03.006}
 }
 
+@article {AlvarezBlickleLyubeznik2005,
+    AUTHOR = {{\`A}lvarez Montaner, J. and Blickle, M. and Lyubeznik,
+              G.},
+     TITLE = {Generators of {$D$}-modules in positive characteristic},
+   JOURNAL = {Math. Res. Lett.},
+  FJOURNAL = {Mathematical Research Letters},
+    VOLUME = {12},
+      YEAR = {2005},
+    NUMBER = {4},
+     PAGES = {459--473},
+      ISSN = {1073-2780},
+   MRCLASS = {13N10},
+  MRNUMBER = {2155224},
+       DOI = {10.4310/MRL.2005.v12.n4.a2},
+       URL = {https://doi.org/10.4310/MRL.2005.v12.n4.a2},
+}
+
 @ARTICLE{AberbachExistenceOfTheFSignature,
   author = {Aberbach, Ian M.},
   title = {The existence of the {F}-signature for rings with large {$\Bbb Q$}-{G}orenstein
@@ -7518,4 +7535,37 @@ doi = "https://doi.org/10.1016/j.matpur.2014.02.009",
 url = "http://www.sciencedirect.com/science/article/pii/S0021782414000245",
 author = "Karl Schwede and Kevin Tucker",
 keywords = "Test ideals, Jumping numbers, Vanishing theorem, Multiplier ideal, Skoda complex, Global division theorem"
+}
+
+@article {BoixDeStefaniVanzo2015,
+    AUTHOR = {Boix, A. F. and De Stefani, A. and Vanzo, D.},
+     TITLE = {An algorithm for constructing certain differential operators
+              in positive characteristic},
+   JOURNAL = {Matematiche (Catania)},
+  FJOURNAL = {Le Matematiche},
+    VOLUME = {70},
+      YEAR = {2015},
+    NUMBER = {1},
+     PAGES = {239--271},
+      ISSN = {0373-3505},
+   MRCLASS = {13N10 (13A35)},
+  MRNUMBER = {3351468},
+MRREVIEWER = {Alexander B. Levin},
+}
+
+@article {BlancoBoixFordhamYilmaz2018,
+    AUTHOR = {Blanco-Chac\'on, I. and Boix, A. F. and Fordham, S.
+              and Yilmaz, E. S.},
+     TITLE = {Differential operators and hyperelliptic curves over finite
+              fields},
+   JOURNAL = {Finite Fields Appl.},
+  FJOURNAL = {Finite Fields and their Applications},
+    VOLUME = {51},
+      YEAR = {2018},
+     PAGES = {351--370},
+      ISSN = {1071-5797},
+   MRCLASS = {14H50 (13A35 13N10 14H20 14H25)},
+  MRNUMBER = {3781411},
+       DOI = {10.1016/j.ffa.2018.02.007},
+       URL = {https://doi.org/10.1016/j.ffa.2018.02.007},
 }
