Added new bibtex entry.

--- a/Fsing/TestIdealsPaper/MainBib.bib
+++ b/Fsing/TestIdealsPaper/MainBib.bib
@@ -7569,3 +7569,20 @@ MRREVIEWER = {Alexander B. Levin},
        DOI = {10.1016/j.ffa.2018.02.007},
        URL = {https://doi.org/10.1016/j.ffa.2018.02.007},
 }
+@article {TakTak08,
+    AUTHOR = {Takagi, S. and Takahashi, R.},
+     TITLE = {{$D$}-modules over rings with finite {$F$}-representation
+              type},
+   JOURNAL = {Math. Res. Lett.},
+  FJOURNAL = {Mathematical Research Letters},
+    VOLUME = {15},
+      YEAR = {2008},
+    NUMBER = {3},
+     PAGES = {563--581},
+      ISSN = {1073-2780},
+   MRCLASS = {13A35 (13D45 13N10)},
+  MRNUMBER = {2407232 (2009e:13003)},
+MRREVIEWER = {Manuel Blickle},
+       DOI = {10.4310/MRL.2008.v15.n3.a15},
+       URL = {http://dx.doi.org/10.4310/MRL.2008.v15.n3.a15},
+}
