Modification in the level part, \cite{TakTak08}
I just point out that the equivalence for an elliptic curve between F-purity and being ordinary was already proved by Takagi and Takahashi.

--- a/Fsing/TestIdealsPaper/TestIdeals.tex
+++ b/Fsing/TestIdealsPaper/TestIdeals.tex
@@ -1086,7 +1086,7 @@ case is when $K=\mathbb{F}_p$ and $f$ is the defining homogeneous polynomial of 
 of genus $g;$ when $g=1,$ it was proved in
 \cite{BoixDeStefaniVanzo2015} that the corresponding elliptic curve defined by $f$
 is ordinary if and only if its level is $1,$ (equivalently, if and only if
-$(R/(f))_{(x,y,z)}$ is $F$--pure% \cite{TakTak08}
+$(R/(f))_{(x,y,z)}$ is $F$--pure, this was already proved by Takagi and Takahashi in \cite{TakTak08}
 ) and supersingular if and only if its level is $2.$ When
 the genus is at least $2,$ level $2$ is a necessary (but not sufficient) condition for the curve
 for being ordinary \cite{BlancoBoixFordhamYilmaz2018}; in this case, one also
