--- a/Fsing/TestIdealsPaper/TestIdeals.tex
+++ b/Fsing/TestIdealsPaper/TestIdeals.tex
@@ -85,7 +85,7 @@ urlcolor=OliveGreen
 
 \begin{document}
 \title{The  {TestIdeals} package for \emph{Macaulay2}}
-\author[Alberto F.\ Boix et at.]{Alberto F.\ Boix}
+\author[Alberto F.\ Boix et al.]{Alberto F.\ Boix}
 \address{Department of Mathematics, Ben-Gurion University of the Negev, Beer-Sheva 8410501, Israel}
 \email{fernanal@post.bgu.ac.il}
 \thanks{A.F.~Boix was supported by Israel Science Foundation (grant No. 844/14) and Spanish Ministerio de Econom\'ia y Competitividad MTM2016-7881-P}
